--- a/cfg/tf2ware_ultimate/fake_specialrounds.cfg
+++ b/cfg/tf2ware_ultimate/fake_specialrounds.cfg
@@ -137,6 +137,7 @@ The Giant Rat Who Makes All Of The Rules
 Build Your Own Minigame
 Rules of Nature
 Hey Buddy I Think You Got The Wrong Door
+warioware.exe
 
 // from forum post
 Mandrill Maze Mayhem
