Replace starting logo with waiting for players overlay
The logo is on the loading screen so it's redundant

--- a/cfg/tf2ware_ultimate/overlays.cfg
+++ b/cfg/tf2ware_ultimate/overlays.cfg
@@ -1,6 +1,4 @@
 // only for precaching purposes
-__logo_text
-__logo_textless
 chalkboard
 countdown_1
 countdown_2
@@ -21,3 +19,4 @@ default_victory_all
 minigame_blank
 slow_down
 special_round
+waiting_players
