--- a/cfg/tf2ware_ultimate/specialrounds.cfg
+++ b/cfg/tf2ware_ultimate/specialrounds.cfg
@@ -9,6 +9,7 @@ collisions
 double_trouble
 extended_round
 fov
+hale
 inclinity_problem
 //invisible  TODO need a better performance implementation
 low_gravity
