Add all taunts to whitelist

--- a/cfg/tf2ware_ultimate/item_whitelist.cfg
+++ b/cfg/tf2ware_ultimate/item_whitelist.cfg
@@ -1,4 +1,4 @@
-// Whitelist of melees and hats only for dedicated servers
+// Whitelist of melees, hats and taunts only for dedicated servers
 "item_whitelist"
 {
 	// melees
@@ -1118,4 +1118,111 @@
 	"The Top Brass" "1"
 	"Buck's Brim" "1"
 	"World Traveler" "1"
+	// taunts
+	"High Five Taunt" "1"
+	"Replay Taunt" "1"
+	"Laugh Taunt" "1"
+	"Meet the Medic Heroic Taunt" "1"
+	"The Shred Alert" "1"
+	"Square Dance Taunt" "1"
+	"Flippin' Awesome Taunt" "1"
+	"Buy A Life Taunt" "1"
+	"Results Are In Taunt" "1"
+	"RPS Taunt" "1"
+	"Skullcracker Taunt" "1"
+	"Party Trick Taunt" "1"
+	"Fresh Brewed Victory Taunt" "1"
+	"Spent Well Spirits Taunt" "1"
+	"Rancho Relaxo Taunt" "1"
+	"I See You Taunt" "1"
+	"Battin' a Thousand Taunt" "1"
+	"Conga Taunt" "1"
+	"Deep Fried Desire Taunt" "1"
+	"Oblooterated Taunt" "1"
+	"Taunt: Kazotsky Kick" "1"
+	"Taunt: Mannrobics" "1"
+	"Taunt: The Carlton" "1"
+	"Taunt: The Victory Lap" "1"
+	"Taunt: The Table Tantrum" "1"
+	"Taunt: The Boiling Point" "1"
+	"Taunt: Yeti Punch" "1"
+	"Taunt: Yeti Smash" "1"
+	"Taunt: Panzer Pants" "1"
+	"Taunt: The Scooty Scoot" "1"
+	"Pool Party Taunt" "1"
+	"Taunt: The Boston Breakdance" "1"
+	"Taunt: The Killer Solo" "1"
+	"Taunt: Most Wanted" "1"
+	"Taunt: The Boxtrot" "1"
+	"Taunt: The Proletariat Showoff" "1"
+	"Taunt: Bucking Bronco" "1"
+	"Taunt: Burstchester" "1"
+	"Taunt: True Scotsman's Call" "1"
+	"Taunt: Zoomin' Broom" "1"
+	"Taunt: Soldier's Requiem" "1"
+	"Taunt: The Fubar Fanfare" "1"
+	"Taunt: Disco Fever" "1"
+	"Taunt: The Balloonibouncer" "1"
+	"Taunt: Second Rate Sorcery" "1"
+	"Taunt: Didgeridrongo" "1"
+	"Taunt: Scotsmann's Stagger" "1"
+	"Taunt: The Dueling Banjo" "1"
+	"Taunt: The Russian Arms Race" "1"
+	"Taunt: The Soviet Strongarm" "1"
+	"Taunt: The Jumping Jack" "1"
+	"Taunt: The Headcase" "1"
+	"Taunt: The Trackman's Touchdown" "1"
+	"Taunt: Surgeon's Squeezebox" "1"
+	"Taunt: The Skating Scorcher" "1"
+	"Taunt: The Bunnyhopper" "1"
+	"Taunt: Runner's Rhythm" "1"
+	"Taunt: Luxury Lounge" "1"
+	"Taunt: The Pooped Deck" "1"
+	"Taunt: Time Out Therapy" "1"
+	"Taunt: Rocket Jockey" "1"
+	"Taunt: The Boston Boarder" "1"
+	"Taunt: Scorcher's Solo" "1"
+	"Taunt: Texas Truckin" "1"
+	"Taunt: Spin-to-Win" "1"
+	"Taunt: The Fist Bump" "1"
+	"Taunt: The Drunken Sailor" "1"
+	"Taunt: The Profane Puppeteer" "1"
+	"Taunt: The Mannbulance!" "1"
+	"Taunt: Bare Knuckle Beatdown" "1"
+	"Taunt: The Homerunner's Hobby" "1"
+	"Taunt: Doctor's Defibrillators" "1"
+	"Taunt: Shooter's Stakeout" "1"
+	"Taunt: The Hot Wheeler" "1"
+	"Taunt: Texas Twirl 'Em" "1"
+	"Taunt: The Scaredy-cat!" "1"
+	"Taunt: The Crypt Creeper" "1"
+	"Taunt: The Travel Agent" "1"
+	"Taunt: Drunk Mann's Cannon" "1"
+	"Taunt: Shanty Shipmate" "1"
+	"Taunt: Russian Rubdown" "1"
+	"Taunt: Tailored Terminal" "1"
+	"Taunt: Roasty Toasty" "1"
+	"Taunt: Star-Spangled Strategy" "1"
+	"Taunt: Killer Joke" "1"
+	"Taunt: The Head Doctor" "1"
+	"Taunt: Tuefort Tango" "1"
+	"Taunt: The Road Rager" "1"
+	"Taunt: The Killer Signature" "1"
+	"Taunt: Roar O'War" "1"
+	"Taunt: Neck Snap" "1"
+	"Taunt: Borrowed Bones" "1"
+	"Taunt: Cheers!" "1"
+	"Taunt: Mourning Mercs" "1"
+	"Taunt: Foul Play" "1"
+	"Taunt: Can It!" "1"
+	"Taunt: Cremator's Condolences" "1"
+	"Taunt: Straight Shooter Tutor" "1"
+	"Taunt: Unleashed Rage" "1"
+	"Taunt: Crushing Defeat" "1"
+	"Taunt: Peace Out" "1"
+	"Taunt: Commending Clap" "1"
+	"Taunt: The Punchline" "1"
+	"Taunt: Curtain Call" "1"
+	"Taunt: Peace!" "1"
+	"Taunt: Fore-Head Slice" "1"
 }
