Add DS Mona and Wii Penny themes

--- a/cfg/tf2ware_ultimate/themes.cfg
+++ b/cfg/tf2ware_ultimate/themes.cfg
@@ -106,6 +106,17 @@
 	}
 },
 {
+	theme_name = "ds_touched_mona"
+	visual_name = "Mona (DS - Touched!)"
+	sounds = 
+	{
+		"failure": 2.075
+		"intro":   1.937
+		"results": 0.0
+		"victory": 2.022
+	}
+},
+{
 	theme_name = "ds_touched_wario"
 	visual_name = "Wario (DS - Touched!)"
 	sounds = 
@@ -170,6 +181,17 @@
 		"intro":   4.1
 		"results": 0.0
 		"victory": 2.097
+	}
+},
+{
+	theme_name = "wii_penny"
+	visual_name = "Penny (Wii)"
+	sounds = 
+	{
+		"failure": 2.052
+		"intro":   4.115
+		"results": 0.0
+		"victory": 2.078
 	}
 },
 // these aren't rolled and should never be set as Ware_Theme, but rather Ware_SetupThemeSounds() checks for them
