Add new theme author info

--- a/cfg/tf2ware_ultimate/themes.cfg
+++ b/cfg/tf2ware_ultimate/themes.cfg
@@ -108,6 +108,7 @@
 {
 	theme_name = "ds_touched_mona"
 	visual_name = "Mona (DS - Touched!)"
+	author = "tilderain"
 	sounds = 
 	{
 		"failure": 2.075
@@ -186,6 +187,7 @@
 {
 	theme_name = "wii_penny"
 	visual_name = "Penny (Wii)"
+	author = "tilderain"
 	sounds = 
 	{
 		"failure": 2.052
