Add alternate special round and waiting for players music

--- a/cfg/tf2ware_ultimate/themes.cfg
+++ b/cfg/tf2ware_ultimate/themes.cfg
@@ -12,9 +12,11 @@
 		"gameover":         5.0 // ''
 		"intro":            4.0
 		"lets_get_started": 0.0
+		"lets_get_started_alt": 0.0
 		"mapend":           0.0
 		"results":          0.0
 		"special_round":    15.2 // "Feline Fever ~ Jimmy T - Intro Cutscene" from Warioware Smooth Moves
+		"special_round_alt":13.546
 		"speedup":          4.5
 		"victory":          2.0
 	}
