Redesign Explosive Barrels minigame
Less of a copy paste of Avoid Props now

--- a/cfg/tf2ware_ultimate/minigames.cfg
+++ b/cfg/tf2ware_ultimate/minigames.cfg
@@ -1,5 +1,4 @@
 airblast
-avoid_barrels
 avoid_props
 avoid_trains
 backstab
@@ -16,6 +15,7 @@ catch_cubes
 catch_money
 change_class
 count_bombs
+destroy_barrels
 disguise
 dodge_laser
 dont_touch
