Rename the filename too
For consistency with other minigames

--- a/cfg/tf2ware_ultimate/minigames.cfg
+++ b/cfg/tf2ware_ultimate/minigames.cfg
@@ -29,6 +29,7 @@ grapple_cutout
 grapple_player
 halloween_fight
 headshot
+heavy_medic
 hit_balls
 hit_player
 hoop
@@ -40,7 +41,6 @@ land_platform
 laugh
 limbo
 math
-medic
 melee_arena
 merasmus
 most_bombs
