Add new minigames/special rounds in rotation

--- a/cfg/tf2ware_ultimate/specialrounds.cfg
+++ b/cfg/tf2ware_ultimate/specialrounds.cfg
@@ -26,6 +26,7 @@ simon
 size_matters
 skull
 slow_mo
+speed_run
 squid_game
 sudden_death
 team_battles
@@ -33,4 +34,5 @@ thirdperson
 time_attack
 two_bosses
 up_down
+wheelchair
 //wipeout 	TODO need to complete the missing stuff first
