Config for tiny wario theme

--- a/cfg/tf2ware_ultimate/themes.cfg
+++ b/cfg/tf2ware_ultimate/themes.cfg
@@ -190,10 +190,22 @@
 	author = "tilderain"
 	sounds = 
 	{
-		"failure": 2.052
-		"intro":   4.115
+		"failure": 2.039
+		"intro":   4.167
 		"results": 0.0
-		"victory": 2.078
+		"victory": 1.990
+	}
+},
+{
+	theme_name = "wii_tinywario"
+	visual_name = "Tiny Wario (Wii)"
+	author = "Infomaniac"
+	sounds = 
+	{
+		"failure": 2.000
+		"intro":   4.000
+		"results": 0.0
+		"victory": 2.000
 	}
 },
 // these aren't rolled and should never be set as Ware_Theme, but rather Ware_SetupThemeSounds() checks for them
