Themes: Add Microgame (D.I.Y. Showcase) + Revert changes to themes.nut

--- a/cfg/tf2ware_ultimate/themes.cfg
+++ b/cfg/tf2ware_ultimate/themes.cfg
@@ -81,6 +81,20 @@
 	}
 },
 {
+	theme_name = "ds_diy_microgame"
+	visual_name = "Microgame (WiiWare - D.I.Y. Showcase)"
+	sounds = 
+	{
+		"boss":     4.035
+		"failure":  2.004
+		"gameover": 3.822
+		"intro":    2.01
+		"results":  0.0
+		"speedup":  4.018
+		"victory":  2.028
+	}
+},
+{
 	theme_name = "ds_diy_warioman" // from DIY showcase, should that be counted separately?
 	visual_name = "Wario-Man (WiiWare - D.I.Y. Showcase)" // another of the classic tf2ware themes, this is one of the ones used in tonyware
 	sounds = 
