potentially fix boston basher and fan o war attributes (needs test)

--- a/cfg/tf2ware_ultimate/melee_attributes.cfg
+++ b/cfg/tf2ware_ultimate/melee_attributes.cfg
@@ -12,7 +12,13 @@
 [325] = 
 { 
 	"hit self on miss" : 0,
-},	
+	"bleeding duration" : 0,
+},
+// fan o war	
+[355] =
+{
+	"mark for death" : 0,
+}
 // discipilinary action
 [447] =
 { 
