Disable wrap assassin ball

--- a/cfg/tf2ware_ultimate/melee_attributes.cfg
+++ b/cfg/tf2ware_ultimate/melee_attributes.cfg
@@ -19,6 +19,11 @@
 {
 	"mark for death" : 0,
 },
+// wrap assassin
+[648] =
+{
+	"mod bat launches ornaments": 0,
+},
 // discipilinary action
 [447] =
 { 
