--- a/cfg/tf2ware_ultimate/melee_attributes.cfg
+++ b/cfg/tf2ware_ultimate/melee_attributes.cfg
@@ -153,6 +153,8 @@
 [173] = { "max health additive penalty" : 0 },
 // bushwacka
 [232] = { "dmg taken increase" : 1 },
+// tribalman's shiv
+[171] = { "bleeding duration" : 0 },
 // conniver's kunai
 [356] = 
 { 
