Add merasmus special round

--- a/cfg/tf2ware_ultimate/specialrounds.cfg
+++ b/cfg/tf2ware_ultimate/specialrounds.cfg
@@ -16,6 +16,7 @@ inclinity_problem
 //invisible  TODO need a better performance implementation
 low_gravity
 math_only
+merasmus
 mirrored_world
 no_movingback
 non_stop
