--- a/cfg/tf2ware_ultimate/minigames.cfg
+++ b/cfg/tf2ware_ultimate/minigames.cfg
@@ -45,7 +45,6 @@ limbo
 math
 melee_arena
 merasmus
-most_bombs
 move
 parachute
 pickup_can
@@ -60,6 +59,7 @@ sap
 sawrun
 shark
 shoot_barrel
+shoot_bombs
 shoot_gifts
 shoot_target
 simon_says
