Don't rename the minigame file

--- a/cfg/tf2ware_ultimate/minigames.cfg
+++ b/cfg/tf2ware_ultimate/minigames.cfg
@@ -45,6 +45,7 @@ limbo
 math
 melee_arena
 merasmus
+most_bombs
 move
 parachute
 pickup_can
@@ -59,7 +60,6 @@ sap
 sawrun
 shark
 shoot_barrel
-shoot_bombs
 shoot_gifts
 shoot_target
 simon_says
