--- a/cfg/tf2ware_ultimate/specialrounds.cfg
+++ b/cfg/tf2ware_ultimate/specialrounds.cfg
@@ -12,6 +12,7 @@ double_trouble
 extended_round
 fov
 hale
+hunger_update
 inclinity_problem
 //invisible  TODO need a better performance implementation
 low_gravity
