Kill 'All Mixed Up' and rename 'Cricket and Mantis' internally Following orders from requested changes. switch_moveit_cricketandmantis -> switch_moveit_cricket

--- a/cfg/tf2ware_ultimate/themes.cfg
+++ b/cfg/tf2ware_ultimate/themes.cfg
@@ -224,22 +224,7 @@
 	}
 },
 {
-	theme_name = "switch_moveit_allmixedup"
-	visual_name = "All Mixed Up (Switch - Move It!)"
-	author = "Trobby"
-	sounds = 
-	{
-		"boss":     3.989
-		"failure":  2.026
-		"gameover": 3.018
-		"intro":    4.291
-		"results":  0.0
-		"speedup":  4.017
-		"victory":  1.993
-	}
-},
-{
-	theme_name = "switch_moveit_cricketandmantis"
+	theme_name = "switch_moveit_cricket"
 	visual_name = "Young Cricket & Master Mantis (Switch - Move It!)"
 	author = "Trobby"
 	sounds = 
