Update config and map

--- a/cfg/tf2ware_ultimate/minigames.cfg
+++ b/cfg/tf2ware_ultimate/minigames.cfg
@@ -35,7 +35,6 @@ grapple_cutout
 grapple_player
 halloween_fight
 headshot
-heavy_medic
 hit_balls
 hit_player
 hoop
@@ -52,6 +51,7 @@ melee_arena
 merasmus
 most_bombs
 move
+needle_jump
 parachute
 pickup_can
 piggyback
